<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/coordinator">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:id="@+id/app_bar">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways"
                android:id="@+id/toolbar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_menu"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/menu_login"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notification"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:id="@+id/menu_notification"
                    app:tint="@color/white"
                    android:contentDescription="@string/todo" />
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@drawable/edit_input"
                android:gravity="center_vertical"
                android:id="@+id/search_product"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:adjustViewBounds="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/search_icon"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/search_badge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:hint="Search Products"
                    android:textColorHint="@color/light_black"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:background="@android:color/transparent"/>

                <ImageView
                    android:id="@+id/iv_clear_text"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:adjustViewBounds="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_outline_settings_voice_24"/>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/scrollView"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"

                    >
                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/imageSlider"
                        android:layout_width="match_parent"
                        app:iss_selected_dot="@drawable/select_dot"
                        app:iss_unselected_dot="@drawable/unselect_dots"
                        android:layout_height="200dp" />
                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/light_brown">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/smartphone"
                                    app:civ_border_color="@color/teal_700"
                                    android:background="@drawable/oval_shape"
                                    app:civ_border_width="2dp"
                                    android:id="@+id/phone"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textColor="@color/black"
                                    android:textSize="11sp"
                                    android:textStyle="bold"
                                    android:text="@string/smartPhone"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/laptop3"
                                    app:civ_border_color="@color/teal_700"
                                    app:civ_border_width="2dp"
                                    android:id="@+id/laptop"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textColor="@color/black"
                                    android:textSize="11sp"
                                    android:textStyle="bold"
                                    android:text="@string/laptop"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/cardss"
                                    android:background="@drawable/oval_shape"
                                    app:civ_border_color="@color/teal_700"
                                    app:civ_border_width="2dp"
                                    android:id="@+id/card"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textColor="@color/black"
                                    android:textSize="11sp"
                                    android:textStyle="bold"
                                    android:text="@string/card"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/fashions"
                                    app:civ_border_color="@color/teal_700"
                                    app:civ_border_width="2dp"
                                    android:id="@+id/laptop1"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textColor="@color/black"
                                    android:textSize="11sp"
                                    android:textStyle="bold"
                                    android:text="@string/fashion"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/refurs"
                                    app:civ_border_color="@color/teal_700"
                                    app:civ_border_width="2dp"
                                    android:id="@+id/phone2"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textColor="@color/black"
                                    android:textSize="11sp"
                                    android:textStyle="bold"
                                    android:text="@string/refurbished"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/offers"
                                    app:civ_border_color="@color/teal_700"
                                    app:civ_border_width="2dp"
                                    android:id="@+id/phone3"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textColor="@color/black"
                                    android:textSize="11sp"
                                    android:textStyle="bold"
                                    android:text="@string/offers"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/laptop2"
                                    app:civ_border_color="@color/teal_700"
                                    app:civ_border_width="2dp"
                                    android:id="@+id/laptop3"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textColor="@color/black"
                                    android:textSize="11sp"
                                    android:text="@string/laptop"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/phone"
                                    app:civ_border_color="@color/teal_700"
                                    app:civ_border_width="2dp"
                                    android:id="@+id/phone4"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textColor="@color/black"
                                    android:textSize="11sp"
                                    android:text="@string/laptop"/>
                            </LinearLayout>
                        </LinearLayout>

                    </HorizontalScrollView>
                </androidx.cardview.widget.CardView>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/trio"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:src="@drawable/picture5"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="550dp"
                        android:src="@drawable/square"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/picture1"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/oval_shape"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/progressBar"/>
</RelativeLayout>